--- a/facts.html
+++ b/facts.html
@@ -86,7 +86,7 @@
         </ol>
 
         <div class="text-center">
-            <button type="button" class="btn btn-lg btn-outline-danger animate__animated animate__fadeInLeft animate__delay-5s">Take a quiz!</button>
+            <a href="quiz/index.html"><button type="button" class="btn btn-lg btn-outline-danger animate__animated animate__fadeInLeft animate__delay-5s">Take a quiz!</button></a>
         </div>
     </div>
 </body>
