--- a/index.html
+++ b/index.html
@@ -428,11 +428,11 @@
                         <a class="nav-link  dropdown-toggle" href="#" data-toggle="dropdown">Info</a>
                         <ul class="dropdown-menu fade-down">
                             <li><a class="dropdown-item" href="facts.html">Facts</a></li>
-                            <li><a class="dropdown-item" href="#">Quiz</a></li>
+                            <li><a class="dropdown-item" href="quiz/index.html">Quiz</a></li>
                         </ul>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#l">Articles</a>
+                        <a class="nav-link" href="articles/article.html">Articles</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">Statistics</a>
@@ -532,7 +532,7 @@
     </div>
 
     <div class="button text-center">
-        <button type="button" class="btn btn-info ">Read more</button>
+        <a href="articles/article.html"><button type="button" class="btn btn-info ">Read more</button></a>
     </div>
 
     <div class="facts">
