--- a/index.html
+++ b/index.html
@@ -622,13 +622,13 @@
                         <a class="nav-link" href="articles/article.html">Articles</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Statistics</a>
+                        <a class="nav-link" href="statistics.html">Statistics</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Solutions</a>
+                        <a class="nav-link" href="Solutions/index.html">Solutions</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Calculator</a>
+                        <a class="nav-link" href="carbon-footprint-calculator/index.html">Calculator</a>
                     </li>
 
                 </ul>
@@ -863,7 +863,7 @@
                 <a href="facts.html">Facts</a> ·
                 <a href="quiz/index.html">Quiz</a> ·
                 <a href="articles/article.html">Articles</a> ·
-                <a href="">Calculator</a> ·
+                <a href="carbon-footprint-calculator/index.html">Calculator</a> ·
             </p>
 
             <p class="footer-company-name">Climate Change © 2015</p>
